--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.1"
+    "@netlify/functions": "^2.0.0",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
