--- a/project/package.json
+++ b/project/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
     "@netlify/functions": "^2.0.0",
     "stripe": "^14.0.0"
   },
